--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.15.5",
     "pg-hstore": "^2.3.4",
@@ -19,10 +20,13 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
