updating migrations and creating models

--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.0.2",
+    "@types/express": "^5.0.1",
     "express": "^5.1.0",
-    "pg": "^8.15.5",
+    "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
