--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/icons-material": "^7.0.2",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
