--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "uuid": "^11.1.0"
