--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^7.5.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
